<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.divanoapps.learnwords.activities.DeckEditActivity">
    <item
        android:id="@+id/action_rename"
        android:title="@string/rename"
        android:icon="@drawable/ic_actionbar_rename"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_actionbar_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/delete_this_deck"
        android:icon="@drawable/ic_actionbar_delete"
        app:showAsAction="never" />
</menu>
