<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_deck"
        android:textSize="24sp"
        android:layout_marginBottom="18dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:labelFor="@+id/deck_name_edit"/>

    <EditText
        android:id="@+id/deck_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="50"
        android:inputType="textShortMessage" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/from_language"
        android:labelFor="@+id/deck_name_edit"/>

    <Spinner
        android:id="@+id/language_from_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:entries="@array/languages" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_language"
        android:labelFor="@+id/deck_name_edit"/>

    <Spinner
        android:id="@+id/language_to_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:entries="@array/languages" />

</LinearLayout>