<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/nav_bar_menu_group_deck_type"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_decks"
            android:icon="@drawable/ic_nav_bar_menu_decks"
            android:title="@string/decks" />
        <item
            android:id="@+id/nav_shared_decks"
            android:icon="@drawable/ic_nav_bar_menu_shared_decks"
            android:title="@string/shared_decks" />
    </group>
    <group android:id="@+id/nav_bar_menu_group_actions">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_nav_bar_menu_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_nav_bar_menu_sign_out"
            android:title="@string/sign_out"
            />
    </group>

    <!--<group android:checkableBehavior="single">-->
        <!--<item-->
            <!--android:id="@+id/nav_decks"-->
            <!--android:icon="@drawable/ic_nav_bar_menu_decks"-->
            <!--android:title="@string/decks" />-->
    <!--</group>-->

    <!--<group android:checkableBehavior="none">-->
        <!--<item-->
            <!--android:id="@+id/nav_settings"-->
            <!--android:icon="@drawable/ic_nav_bar_menu_settings"-->
            <!--android:title="@string/settings" />-->
    <!--</group>-->

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
