<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/primary_info_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:layout_marginBottom="38dp"
            android:padding="5dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/picture_view"
                android:layout_width="210dp"
                android:layout_height="210dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="38dp"
                app:srcCompat="@drawable/ic_card_edit_add_picture"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/word_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Word"
                android:textAlignment="center"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/word_comment_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Word comment"
                android:textAlignment="center"
                android:textSize="16sp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/card_parts_separator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:text="-"
                android:textAlignment="center"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/translation_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Translation"
                android:textAlignment="center"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/translation_comment_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Translation comment"
                android:textAlignment="center"
                android:textSize="16sp"
                android:visibility="gone"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFDDDDDD"/>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/action_bar_area"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/secondary_info_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/decoration_difficulty_is"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/decorator_difficulty_is"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="4dp"/>

                <TextView
                    android:id="@+id/difficulty_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_difficulty"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toRightOf="@+id/decoration_difficulty_is"
                    app:layout_constraintBaseline_toBaselineOf="@+id/decoration_difficulty_is"
                    android:layout_marginStart="3dp" />

                <TextView
                    android:id="@+id/decoration_out_of"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/decorator_out_of"
                    app:layout_constraintLeft_toRightOf="@+id/difficulty_view"
                    app:layout_constraintBaseline_toBaselineOf="@+id/decoration_difficulty_is"
                    android:layout_marginStart="3dp" />

                <TextView
                    android:id="@+id/difficulty_maximum_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_difficulty"
                    app:layout_constraintLeft_toRightOf="@+id/decoration_out_of"
                    app:layout_constraintBaseline_toBaselineOf="@+id/decoration_difficulty_is"
                    android:layout_marginStart="3dp" />

            </android.support.constraint.ConstraintLayout>

            <ImageButton
                android:id="@+id/switch_enable_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="64dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/delete_button"
                app:srcCompat="@drawable/ic_card_item_visible"
                android:tint="@color/cardActionIcon"/>

            <ImageButton
                android:id="@+id/delete_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="64dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:srcCompat="@drawable/ic_card_item_delete"
                android:tint="@color/cardActionIcon"/>
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>